# lod2-rs

./: Cargo.toml  README.md
arrangement/: Cargo.toml
arrangement/periurban1/: output.city.jsonl
arrangement/periurban2/: output.city.jsonl
arrangement/src/: main.rs
arrangement/urban2/: output.city.jsonl
graph-cut/: Cargo.toml
graph-cut/periurban1/: output.city.jsonl
graph-cut/periurban2/: output.city.jsonl
graph-cut/src/: main.rs
graph-cut/urban2/: output.city.jsonl
lod2-common/: Cargo.toml
lod2-common/src/: cityjson.rs  las_reader.rs  lib.rs  mesh.rs  pipeline.rs  plane.rs  point_cloud.rs  polygon.rs  vector_reader.rs
plane-extrude/: Cargo.toml  readme.md
plane-extrude/periurban1/: output.city.jsonl
plane-extrude/src/: main.rs
