[package]
name = "graph-cut"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "graph-cut"
path = "src/main.rs"

[dependencies]
lod2-common = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
spade = { workspace = true }
petgraph = { workspace = true }
